<resources>
    <string name="app_name">Contacts</string>
    <string name="add_contact">Add contact</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="contact_img_desc">The image of the contact.</string>
    <string name="edit_contact">Edit contact</string>
    <string name="delete_contact">Delete contact</string>
    <string name="add_new_contact">Add a new contact</string>
    <string name="contact_row_img_desc">The image of each individual contact.</string>
    <string name="update_contact">Update existing contact</string>
    <string name="search">Search</string>
    <string name="close_app">Close</string>
    <string name="no_contacts_add_new">Add a new contact</string>
    <string name="maximum_img_size_exceeded">Maximum image size exceeded. (%d MB)\nPlease try a different one.</string>
    <string name="error_opening_img">There was an error opening the image.</string>
    <string name="unknown_error">An unknown error occurred. Please try again with a different image.</string>
    <string name="choose_img_from">Choose image from</string>
    <string name="invalid_email">Invalid Email address.</string>
    <string name="enter_valid_email">Please enter a valid email address.</string>
    <string name="ok">OK</string>
    <string name="invalid_contact">Invalid contact name.</string>
    <string name="enter_contact_name">Please enter the name of the new contact.</string>
    <string name="enter_valid_contact_name">Please enter a valid contact name.</string>
    <string name="invalid_phone">Invalid phone number.</string>
    <string name="enter_valid_phone">Please enter the phone number of the new contact.</string>
    <string name="contact_added">Contact successfully added.</string>
    <string name="adding_contact_discarded">Adding contact discarded.</string>
    <string name="contact_removed">The contact has been removed from your directory.</string>
    <string name="contact_updated">Contact successfully updated.</string>
    <string name="are_you_sure_delete_contact">Are you sure that you want to delete this contact ?</string>
    <string name="positive">I\'m positive</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Misc strings-->
    <string name="transition_contact_img" translatable="false">transition:IMAGE</string>
    <string name="show_confirm_dialog" translatable="false">show_confirm_dialog</string>
    <string name="contacts_save_file_name" translatable="false">contact_save_filename</string>

    <string name="ten_digits">10 digits</string>
    <string name="empty_contacts_list">Your contacts\' list is already empty.</string>
    <string name="clear_contacts">Clear contacts</string>
    <string name="are_you_sure_clear_contacts">Are you sure that you want to clear your contacts\' list ?</string>
    <string name="proceed">PROCEED</string>
    <string name="all_contacts_cleared">All contacts were cleared.</string>
    <string name="undo">UNDO</string>
    <string name="action_append">Append</string>
    <string name="action_overwrite">Overwrite</string>
    <string name="import_options">Import options</string>
    <string name="zero_contacts_loaded">No contacts were added.</string>
    <string name="contact_loaded_success">%d contact was added.</string>
    <string name="contacts_loaded_success">%d contacts were added.</string>
    <string name="save_file_not_found">The save file cannot be found.</string>
    <string name="open_settings">Open Settings</string>
    <string name="no_contacts_to_export">There are no contacts to export.</string>
    <string name="contacts_export_success">Contacts successfully exported.</string>
    <string name="popups">Popups</string>
    <string name="show_deleting_dialog">Show dialog when deleting contact</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="import_export">Import/Export</string>
    <string name="specify_save_file_name">Specify the name of the import/export file</string>
    <string name="saves_file">Saves file</string>
    <string name="action_import">Import</string>
    <string name="action_export">Export</string>
    <string name="settings">Settings</string>
    <string name="data">Data</string>
    <string name="save_draft_contact" translatable="false">save_draft_contact</string>
    <string name="save_draft_summary">Save the discarded contact to draft</string>
    <string name="save_contact">Save contact</string>
    <string name="contact_saved_to_draft">Contact saved to draft.</string>
    <string name="contact_already_exists">An existing contact is already associated with this name.</string>
    <string name="create_anyway">Create anyway</string>
    <string name="choose_email_client">Choose an email client</string>
    <string name="display">Display</string>
    <string name="specify_contacts_ordering">Specify the ordering of the contacts</string>
    <string name="sort_contacts">Sort contacts</string>
    <string name="default_import_action">Default import action</string>
    <string name="appendto_overwrite">Append to/Overwrite existing</string>

    <string name="default_order" translatable="false">DEFAULT_ORDER</string>
    <string name="ask_for_action" translatable="false">ASK</string>
    <string name="key_sort_contacts" translatable="false">key_sort_contacts</string>
    <string name="key_default_import_action" translatable="false">key_default_import_action</string>
    <string name="contacts_save_default_filename" translatable="false">contacts_save</string>
    <string name="remove_selected">Remove selected contacts</string>

    <string-array name="sortentries">
        <item>Default order</item>
        <item>Ascending order</item>
        <item>Descending order</item>
    </string-array>
    <string-array name="sortvalues" translatable="false">
        <item>@string/default_order</item>
        <item>ASC</item>
        <item>DESC</item>
    </string-array>

    <string-array name="importentries">
        <item>Ask for action</item>
        <item>Append</item>
        <item>Overwrite</item>
    </string-array>
    <string-array name="importvalues">
        <item>@string/ask_for_action</item>
        <item>@string/action_append</item>
        <item>@string/action_overwrite</item>
    </string-array>
</resources>
